--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="jar/log4j/log4j-core-2.14.1.jar"/>
 	<classpathentry kind="lib" path="jar/picocli/picocli-4.6.2.jar"/>
 	<classpathentry kind="lib" path="jar/poi/poi-5.1.0.jar"/>
 	<classpathentry kind="lib" path="jar/poi/poi-ooxml-5.1.0.jar"/>
@@ -13,6 +12,6 @@
 	<classpathentry kind="lib" path="jar/poi/ooxml-lib/xmlbeans-5.0.2.jar"/>
 	<classpathentry kind="lib" path="jar/poi/lib/commons-collections4-4.4.jar"/>
 	<classpathentry kind="lib" path="jar/poi/lib/commons-io-2.11.0.jar"/>
-	<classpathentry kind="lib" path="jar/poi/lib/log4j-api-2.14.1.jar"/>
+	<classpathentry kind="lib" path="jar/log4j/log4j-api-2.17.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
